# currency-converter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: main.rs
src/dtos/: conversion_dto.rs  conversion_series_dto.rs  mod.rs
src/errors/: app_error.rs
src/frankfurter_api/: functions.rs
src/input/: cli_parser.rs
