[package]
name = "curency_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
derive_more = { version = "0.99.1" }
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.25.0"
serde_json = "1.0.111"
log = "0.4.20"
chrono = "0.4.35"
ordered-float = "4.2.0"
